﻿Legend:
! Breaking change
* Compatible change
- Bugfix
+ New feature
===============================================================================

~~~~~~~~~
! v8.1.0:
~~~~~~~~~

! KGySoft.Drawing.Imaging namespace
===================================
! ReadableBitmapDataExtensions class:
  ! ToBitmap, BeginToBitmap, ToBitmapAsync methods:
    ! When target pixel format is not specified, these method no longer return a Bitmap with Format16bppGrayScale
      pixel format because it is basically supported by this library only but not by the native GDI+ operations.
      Instead, a Bitmap with Format8bppIndexed format with a gray-scale palette is returned, even though it may end
      up in loss of information. If you need the original behavior you still can specify the pixel format.
    - When the target pixel format is an indexed one but there is no target palette specified and the source also
      has no palette, then the back color, alpha threshold and working color space of the source are now respected.


~~~~~~~~~
! v8.0.0:
~~~~~~~~~

+ Assembly changes:
===================
+ Targeting also .NET Framework 4.6 and .NET Standard 2.1

! KGySoft.Drawing namespace
===========================
! PixelFormatExtensions class:
  ! GetInfo method: For pixel formats with linear gamma the Prefers128BitColors property is now set in the result.
  + ToPixelFormat method: Supporting the new KnownPixelFormat values of v8.0.0
* BitmapExtensions class:
  * GetReadableBitmapData/GetWritableBitmapData/GetReadWriteBitmapData methods:
    + They support getting/setting pixels using wide colors without quantizing the color information to the 32-bit
      ARGB color space.
    - Fixing possible errors when the backing buffer of the 48/64 bpp pixel formats contains invalid values.


~~~~~~~~~
* v7.2.0:
~~~~~~~~~

* Common changes
================
* Performance improvements, especially for wide pixel formats.