@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <!--<TargetFrameworks>net35;net40;net46;netcoreapp2.0;netcoreapp3.0;net5.0;net7.0</TargetFrameworks>-->
+    <TargetFrameworks>net35;net40;net46;netcoreapp2.0;netcoreapp3.0;net5.0;net7.0</TargetFrameworks>
     <!--<TargetFrameworks>net8.0</TargetFrameworks>-->
 
     <!--For UnitTesting the .NET Standard versions-->
-    <TargetFrameworks>netcoreapp2.0;netcoreapp3.0</TargetFrameworks>
+    <!--<TargetFrameworks>netcoreapp2.0;netcoreapp3.0</TargetFrameworks>-->
 
     <IsWindows Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Windows)))' == 'true'">true</IsWindows> 
 
