@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>KGySoft.Drawing</id>
-    <version>8.0.0</version>
+    <version>8.1.0</version>
     <title>KGy SOFT Drawing Libraries</title>
     <authors>György Kőszeg</authors>
     <owners>György Kőszeg</owners>
@@ -43,36 +43,36 @@ SkiaSharp specific libraries: https://www.nuget.org/packages/KGySoft.Drawing.Ski
     <repository type="git" url="https://github.com/koszeggy/KGySoft.Drawing" />
     <dependencies>
       <group targetFramework=".NETFramework3.5">
-        <dependency id="KGySoft.Drawing.Core" version="8.0.0" />
+        <dependency id="KGySoft.Drawing.Core" version="8.1.0" />
       </group>
       <group targetFramework=".NETFramework4.0">
-        <dependency id="KGySoft.Drawing.Core" version="8.0.0" />
+        <dependency id="KGySoft.Drawing.Core" version="8.1.0" />
       </group>
       <group targetFramework=".NETFramework4.6">
-        <dependency id="KGySoft.Drawing.Core" version="8.0.0" />
+        <dependency id="KGySoft.Drawing.Core" version="8.1.0" />
       </group>
       <group targetFramework="netcoreapp2.0" >
-        <dependency id="KGySoft.Drawing.Core" version="8.0.0" />
+        <dependency id="KGySoft.Drawing.Core" version="8.1.0" />
         <dependency id="System.Drawing.Common" version="5.0.3" />
       </group>
       <group targetFramework="netcoreapp3.0" >
-        <dependency id="KGySoft.Drawing.Core" version="8.0.0" />
+        <dependency id="KGySoft.Drawing.Core" version="8.1.0" />
         <dependency id="System.Drawing.Common" version="5.0.3" />
       </group>
       <group targetFramework="netstandard2.0" >
-        <dependency id="KGySoft.Drawing.Core" version="8.0.0" />
+        <dependency id="KGySoft.Drawing.Core" version="8.1.0" />
         <dependency id="System.Drawing.Common" version="5.0.3" />
       </group>
       <group targetFramework="netstandard2.1" >
-        <dependency id="KGySoft.Drawing.Core" version="8.0.0" />
+        <dependency id="KGySoft.Drawing.Core" version="8.1.0" />
         <dependency id="System.Drawing.Common" version="5.0.3" />
       </group>
       <group targetFramework="net5.0" >
-        <dependency id="KGySoft.Drawing.Core" version="8.0.0" />
+        <dependency id="KGySoft.Drawing.Core" version="8.1.0" />
         <dependency id="System.Drawing.Common" version="6.0.0" />
       </group>
       <group targetFramework="net7.0" >
-        <dependency id="KGySoft.Drawing.Core" version="8.0.0" />
+        <dependency id="KGySoft.Drawing.Core" version="8.1.0" />
         <dependency id="System.Drawing.Common" version="8.0.0 " />
       </group>
     </dependencies>
